Support native job call for bigquery